Try to fix iOS ui overlapping the chat input

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -489,4 +489,17 @@ a:hover {
     .burger-menu-mobile-toggle {
         display: block;
     }
+
+    /*
+        iOS overlaps 100vh content with safari menu elements
+        https://nicolas-hoizey.com/articles/2015/02/18/viewport-height-is-taller-than-the-visible-part-of-the-document-in-some-mobile-browsers
+    */
+    @​supports (height: 100svh) {
+        .layout {
+            max-height: 100svh;
+        }
+        .menu-servers {
+            height: 100svh;
+        }
+    }
 }
